--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,10 +5,12 @@ homepage: https://www.yeradis.com
 author: Yeradis P. Barbosa Marrero <yeradis@gmail.com>
 
 environment:
-  sdk: '>=1.20.1 <2.0.0'
+  sdk: '>=1.20.1 <=2.0.0-dev.3.0'
 
 #dependencies:
 #  path: ^1.4.1
 
 dev_dependencies:
   test: ^0.12.0
+  coverage: "^0.7.0"
+  dart_codecov_generator: "^0.4.0"
