--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,11 @@
 name: great_circle_distance
 description: Calculate the great-circle distance on the Earth having a pair of Latitude,Longitude points using the Spherical law of cosines, Haversine formula or Vincenty`s formula
-version: 1.0.0
+version: 1.0.1
 homepage: https://www.yeradis.com
 author: Yeradis P. Barbosa Marrero <yeradis@gmail.com>
 
 environment:
-  sdk: '>=1.20.1 <=2.0.0-dev.3.0'
+  sdk: '>=1.20.1'
 
 #dependencies:
 #  path: ^1.4.1
