--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ homepage: https://www.yeradis.com
 author: Yeradis P. Barbosa Marrero <yeradis@gmail.com>
 
 environment:
-  sdk: '>=1.20.1'
+  sdk: '>=1.20.1 <3.0.0'
 
 #dependencies:
 #  path: ^1.4.1
