--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,14 @@
 name: great_circle_distance
 description: Calculate the great-circle distance on the Earth having a pair of Latitude,Longitude points using the Spherical law of cosines, Haversine formula or Vincenty`s formula
-version: 1.0.1
+version: 1.1.0
 homepage: https://www.yeradis.com
 author: Yeradis P. Barbosa Marrero <yeradis@gmail.com>
 
 environment:
-  sdk: '>=1.20.1 <3.0.0'
+  sdk: '>=2.5.0 <3.0.0'
 
 #dependencies:
 #  path: ^1.4.1
 
 dev_dependencies:
-  test: ^0.12.0
+  test: '^1.11.1'
