--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -14,8 +14,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install dependencies
       run: |
-        sudo apt-get -qq update
-        sudo apt-get install lcov
+        apt-get -qq update
+        apt-get install lcov
         pub get
         
     - name: Run tests
