--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -28,6 +28,7 @@ jobs:
       image:  google/dart:latest
       
     steps:
+      - uses: actions/checkout@v2
       - name: Install dependencies
         run: |
           pub get
